[gd_scene load_steps=14 format=1]

[ext_resource path="res://enemies/cannon.gd" type="Script" id=1]
[ext_resource path="res://art/pieces_missile_launcher/arm-r.png" type="Texture" id=2]
[ext_resource path="res://art/pieces_missile_launcher/arm-l.png" type="Texture" id=3]
[ext_resource path="res://art/pieces_missile_launcher/lower-lip.png" type="Texture" id=4]
[ext_resource path="res://art/pieces_missile_launcher/tongue.png" type="Texture" id=5]
[ext_resource path="res://art/heatseeker.png" type="Texture" id=6]
[ext_resource path="res://art/pieces_missile_launcher/body.png" type="Texture" id=7]
[ext_resource path="res://art/pieces_missile_launcher/eyebrows.png" type="Texture" id=8]

[sub_resource type="ConcavePolygonShape2D" id=1]

custom_solver_bias = 0.0
segments = Vector2Array( 16.3699, -60.069, 0.238052, -60.786, 0.238052, -60.786, -6.57318, -48.239, -6.57318, -48.239, -13.0259, -31.0317, -13.0259, -31.0317, -29.5163, -2.71126, -29.5163, -2.71126, -11.592, 34.9298, -11.592, 34.9298, 0.955025, 55.3635, 0.955025, 55.3635, 12.7851, 56.7974, 12.7851, 56.7974, 24.6151, 49.2692, 24.6151, 49.2692, 38.5961, -5.57915, 38.5961, -5.57915, 16.3699, -60.069 )

[sub_resource type="Animation" id=2]

resource/name = "default_pose"
length = 1.0
loop = false
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("cannon_sprites_r90/r-arm:transform/pos")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Vector2( -36.4533, 21.3428 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("cannon_sprites_r90/l-arm:transform/pos")
tracks/1/interp = 1
tracks/1/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Vector2( 38.1612, 21.0147 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/body/eyebrows:transform/pos")
tracks/2/interp = 1
tracks/2/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Vector2( 0, 0 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/lower_jaw:transform/pos")
tracks/3/interp = 1
tracks/3/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Vector2( 0, -5.45116 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/tongue:transform/pos")
tracks/4/interp = 1
tracks/4/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ Vector2( 0, 0 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("cannon_sprites_r90/r-arm:transform/rot")
tracks/5/interp = 1
tracks/5/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ 0.0 ] }
tracks/6/type = "value"
tracks/6/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation:transform/rot")
tracks/6/interp = 1
tracks/6/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ 0.0 ] }
tracks/7/type = "value"
tracks/7/path = NodePath("cannon_sprites_r90/l-arm:transform/rot")
tracks/7/interp = 1
tracks/7/keys = { "cont":true, "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ 0.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "firing"
length = 2.5
loop = false
step = 0.25
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/keys = { "times":FloatArray( 1 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"fire" } ] }
tracks/1/type = "value"
tracks/1/path = NodePath("cannon_sprites_r90/l-arm:transform/pos")
tracks/1/interp = 2
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 46, 6 ), Vector2( 46, 6 ), Vector2( 46, 6 ), Vector2( 46, 6 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("cannon_sprites_r90/r-arm:transform/pos")
tracks/2/interp = 1
tracks/2/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( -46, 5.78106 ), Vector2( -46, 5.78106 ), Vector2( -46, 6 ), Vector2( -46, 5.78106 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("cannon_sprites_r90/l-arm:transform/rot")
tracks/3/interp = 2
tracks/3/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ 0.0, 0.0, 8.61038, 0.0 ] }
tracks/4/type = "value"
tracks/4/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/body/eyebrows:transform/pos")
tracks/4/interp = 2
tracks/4/keys = { "cont":true, "times":FloatArray( 0, 0.25, 1, 1.375, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, -3.70439 ), Vector2( 0, 0 ), Vector2( 0, 4.64145 ), Vector2( 0, 0 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/lower_jaw:transform/pos")
tracks/5/interp = 2
tracks/5/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1.25, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, -5.45116 ), Vector2( 0, -13.7808 ), Vector2( 0, -4 ), Vector2( 0, -5.45116 ) ] }
tracks/6/type = "value"
tracks/6/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/tongue:transform/pos")
tracks/6/interp = 2
tracks/6/keys = { "cont":true, "times":FloatArray( 0, 0.75, 1, 1.375, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( 0, 5.6176 ), Vector2( 0, 0 ), Vector2( 0, -18.7884 ), Vector2( 0, 9.2048 ), Vector2( 0, 5.6176 ) ] }
tracks/7/type = "value"
tracks/7/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/body:transform/pos")
tracks/7/interp = 2
tracks/7/keys = { "cont":true, "times":FloatArray( 0, 1, 1.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ] }
tracks/8/type = "value"
tracks/8/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation:transform/pos")
tracks/8/interp = 2
tracks/8/keys = { "cont":true, "times":FloatArray( 0, 0.75, 1, 1.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -1.18914, 6.51793e-08 ), Vector2( 0.891844, 4.40126 ), Vector2( 0, 0 ) ] }
tracks/9/type = "value"
tracks/9/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/lower_jaw:transform/rot")
tracks/9/interp = 2
tracks/9/keys = { "cont":true, "times":FloatArray( 0, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 0.0, 0.0, 0.0 ] }
tracks/10/type = "value"
tracks/10/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d:transform/pos")
tracks/10/interp = 2
tracks/10/keys = { "cont":true, "times":FloatArray( 0, 0.8, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 8.58406e-07, -19.638 ), Vector2( 3.67526e-06, -84.0798 ), Vector2( 0, 0 ) ] }
tracks/11/type = "value"
tracks/11/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:visibility/visible")
tracks/11/interp = 1
tracks/11/keys = { "cont":false, "times":FloatArray( 0, 0.1, 1, 1.075, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ false, true, true, false, false ] }
tracks/12/type = "value"
tracks/12/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:frame")
tracks/12/interp = 1
tracks/12/keys = { "cont":false, "times":FloatArray( 0, 0.858292, 0.880806, 2, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ 0, 0, 1, 1, 0 ] }
tracks/13/type = "value"
tracks/13/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:transform/scale")
tracks/13/interp = 1
tracks/13/keys = { "cont":true, "times":FloatArray( 0, 0.25, 0.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 1, 1 ), Vector2( 0.5, 1 ) ] }
tracks/14/type = "value"
tracks/14/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:transform/pos")
tracks/14/interp = 1
tracks/14/keys = { "cont":true, "times":FloatArray( 0, 0.25, 0.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -13.5222, 0 ), Vector2( 0, 0 ) ] }
tracks/15/type = "value"
tracks/15/path = NodePath("cannon_sprites_r90/r-arm:transform/rot")
tracks/15/interp = 1
tracks/15/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ -16.6609, -16.6609, -24.0, -16.6609 ] }

[sub_resource type="Animation" id=4]

resource/name = "firing_backup"
length = 2.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("cannon_sprites_r90/r-arm:transform/pos")
tracks/0/interp = 2
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1, 1.75, 2, 2.25, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1 ), "values":[ Vector2( -46, 6 ), Vector2( -46, 6 ), Vector2( -46, 6 ), Vector2( -46, 24.7099 ), Vector2( -53.9443, 20.4507 ), Vector2( -50.9652, 8.7208 ), Vector2( -46, 6 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("cannon_sprites_r90/l-arm:transform/pos")
tracks/1/interp = 2
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 46, 6 ), Vector2( 46, 6 ), Vector2( 46, 6 ), Vector2( 46, 6 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/body/eyebrows:transform/pos")
tracks/2/interp = 2
tracks/2/keys = { "cont":true, "times":FloatArray( 0, 0.25, 1, 1.375, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, -3.70439 ), Vector2( 0, 0 ), Vector2( 0, 4.64145 ), Vector2( 0, 0 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/lower_jaw:transform/pos")
tracks/3/interp = 2
tracks/3/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1.25, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, -5.45116 ), Vector2( 0, -13.7808 ), Vector2( 0, -4 ), Vector2( 0, -5.45116 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/tongue:transform/pos")
tracks/4/interp = 2
tracks/4/keys = { "cont":true, "times":FloatArray( 0, 0.75, 1, 1.375, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( 0, 5.6176 ), Vector2( 0, 0 ), Vector2( 0, -18.7884 ), Vector2( 0, 9.2048 ), Vector2( 0, 5.6176 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("cannon_sprites_r90/r-arm:transform/rot")
tracks/5/interp = 2
tracks/5/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1.04, 1.17, 1.3, 1.43, 1.56, 1.81, 2.25, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "values":[ 0.0, -15.0, -30.6, -39.8294, -38.1111, -26.531, 0.0, -15.5341, -42.5189, 0.0 ] }
tracks/6/type = "value"
tracks/6/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation:transform/rot")
tracks/6/interp = 2
tracks/6/keys = { "cont":true, "times":FloatArray( 0, 1, 1.1875, 1.375, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ 0.0, 0.0, -5.38287, 9.20015, 0.0 ] }
tracks/7/type = "value"
tracks/7/path = NodePath("cannon_sprites_r90/l-arm:transform/rot")
tracks/7/interp = 2
tracks/7/keys = { "cont":true, "times":FloatArray( 0, 0.5, 1, 1.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ 0.0, 0.0, 8.61038, 31.9963, 0.0 ] }
tracks/8/type = "value"
tracks/8/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/body:transform/pos")
tracks/8/interp = 2
tracks/8/keys = { "cont":true, "times":FloatArray( 0, 1, 1.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 0 ) ] }
tracks/9/type = "value"
tracks/9/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation:transform/pos")
tracks/9/interp = 2
tracks/9/keys = { "cont":true, "times":FloatArray( 0, 0.75, 1, 1.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -1.18914, 6.51793e-08 ), Vector2( 2.61609, 7.37265 ), Vector2( 0, 0 ) ] }
tracks/10/type = "value"
tracks/10/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/lower_jaw:transform/rot")
tracks/10/interp = 2
tracks/10/keys = { "cont":true, "times":FloatArray( 0, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 0.0, 0.0, 0.0 ] }
tracks/11/type = "value"
tracks/11/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d:transform/pos")
tracks/11/interp = 2
tracks/11/keys = { "cont":true, "times":FloatArray( 0, 0.8, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 8.58406e-07, -19.638 ), Vector2( 3.67526e-06, -84.0798 ), Vector2( 0, 0 ) ] }
tracks/12/type = "value"
tracks/12/path = NodePath("cannon_sprites_r90/r-arm:transform/scale")
tracks/12/interp = 2
tracks/12/keys = { "cont":true, "times":FloatArray( 0, 1.5, 2, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ] }
tracks/13/type = "value"
tracks/13/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:visibility/visible")
tracks/13/interp = 1
tracks/13/keys = { "cont":false, "times":FloatArray( 0, 0.1, 1, 1.075, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ false, true, true, false, false ] }
tracks/14/type = "value"
tracks/14/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:frame")
tracks/14/interp = 1
tracks/14/keys = { "cont":false, "times":FloatArray( 0, 0.858292, 0.880806, 2, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ 0, 0, 1, 1, 0 ] }
tracks/15/type = "value"
tracks/15/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:transform/scale")
tracks/15/interp = 1
tracks/15/keys = { "cont":true, "times":FloatArray( 0, 0.25, 0.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0.5, 1 ), Vector2( 0.5, 1 ), Vector2( 1, 1 ), Vector2( 0.5, 1 ) ] }
tracks/16/type = "value"
tracks/16/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:transform/pos")
tracks/16/interp = 1
tracks/16/keys = { "cont":true, "times":FloatArray( 0, 0.25, 0.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -13.5222, 0 ), Vector2( 0, 0 ) ] }

[sub_resource type="Animation" id=5]

length = 2.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("cannon_sprites_r90/r-arm:transform/pos")
tracks/0/interp = 2
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( -46, 6 ), Vector2( -46, 6 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("cannon_sprites_r90/l-arm:transform/pos")
tracks/1/interp = 2
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 46, 6 ), Vector2( 46, 6 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/body/eyebrows:transform/pos")
tracks/2/interp = 2
tracks/2/keys = { "cont":true, "times":FloatArray( 0, 1.25, 2.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, -1.81922 ), Vector2( 0, 0 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/lower_jaw:transform/pos")
tracks/3/interp = 2
tracks/3/keys = { "cont":true, "times":FloatArray( 0, 1.5, 2.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Vector2( 0, -5.45116 ), Vector2( 0, -8.78074 ), Vector2( 0, -5.45116 ) ] }
tracks/4/type = "value"
tracks/4/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/tongue:transform/pos")
tracks/4/interp = 2
tracks/4/keys = { "cont":true, "times":FloatArray( 0, 1.5, 1.75, 2, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( 0, 5.6176 ), Vector2( 0, -1.81236 ), Vector2( 0, 5.6176 ), Vector2( 0, -1.81236 ), Vector2( 0, 5.6176 ) ] }
tracks/5/type = "value"
tracks/5/path = NodePath("cannon_sprites_r90/r-arm:transform/rot")
tracks/5/interp = 2
tracks/5/keys = { "cont":true, "times":FloatArray( 0, 1.25, 2.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 0.0, -5.0, 0.0 ] }
tracks/6/type = "value"
tracks/6/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation:transform/rot")
tracks/6/interp = 2
tracks/6/keys = { "cont":true, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ 0.0, 0.0 ] }
tracks/7/type = "value"
tracks/7/path = NodePath("cannon_sprites_r90/l-arm:transform/rot")
tracks/7/interp = 2
tracks/7/keys = { "cont":true, "times":FloatArray( 0, 1.25, 2.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 0.0, 5.0, 0.0 ] }
tracks/8/type = "value"
tracks/8/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/body:transform/pos")
tracks/8/interp = 2
tracks/8/keys = { "cont":true, "times":FloatArray( 0, 1, 2.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, -2.88043 ), Vector2( 0, 0 ) ] }
tracks/9/type = "value"
tracks/9/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation:transform/pos")
tracks/9/interp = 2
tracks/9/keys = { "cont":true, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ) ] }
tracks/10/type = "value"
tracks/10/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/lower_jaw:transform/rot")
tracks/10/interp = 2
tracks/10/keys = { "cont":true, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ 0.0, 0.0 ] }
tracks/11/type = "value"
tracks/11/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d:transform/pos")
tracks/11/interp = 2
tracks/11/keys = { "cont":true, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 0, 0 ), Vector2( 0, 0 ) ] }
tracks/12/type = "value"
tracks/12/path = NodePath("cannon_sprites_r90/r-arm:transform/scale")
tracks/12/interp = 2
tracks/12/keys = { "cont":true, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( 1, 1 ), Vector2( 1, 1 ) ] }
tracks/13/type = "value"
tracks/13/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:visibility/visible")
tracks/13/interp = 1
tracks/13/keys = { "cont":false, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ false, false ] }
tracks/14/type = "value"
tracks/14/path = NodePath("cannon_sprites_r90/cannon_rotation/body_orientation/missile2d/missile:frame")
tracks/14/interp = 1
tracks/14/keys = { "cont":false, "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "values":[ 0, 0 ] }

[node name="cannon" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }
interval = 2.0
max_alive = 4
type = 0

[node name="cannon_sprites_r90" type="Node2D" parent="."]

transform/rot = 90.0

[node name="r-arm" type="Sprite" parent="cannon_sprites_r90"]

transform/pos = Vector2( -36.4533, 21.3428 )
transform/scale = Vector2( 0.999088, 0.999088 )
texture = ExtResource( 2 )
offset = Vector2( -13, -6 )

[node name="l-arm" type="Sprite" parent="cannon_sprites_r90"]

transform/pos = Vector2( 38.1612, 21.0147 )
texture = ExtResource( 3 )
offset = Vector2( 13, -6 )

[node name="cannon_rotation" type="Position2D" parent="cannon_sprites_r90"]

[node name="body_orientation" type="Position2D" parent="cannon_sprites_r90/cannon_rotation"]

transform/pos = Vector2( -1.18914, 6.51793e-08 )

[node name="lower_jaw" type="Sprite" parent="cannon_sprites_r90/cannon_rotation/body_orientation"]

transform/pos = Vector2( 0, -5.45116 )
texture = ExtResource( 4 )
offset = Vector2( 0, -10 )

[node name="tongue" type="Sprite" parent="cannon_sprites_r90/cannon_rotation/body_orientation"]

texture = ExtResource( 5 )
offset = Vector2( 0, -18 )

[node name="missile2d" type="Position2D" parent="cannon_sprites_r90/cannon_rotation/body_orientation"]

transform/pos = Vector2( 3.67526e-06, -84.0798 )
transform/rot = -90.0

[node name="missile" type="Sprite" parent="cannon_sprites_r90/cannon_rotation/body_orientation/missile2d"]

visibility/visible = false
transform/pos = Vector2( -10.1416, 0 )
transform/scale = Vector2( 0.875, 1 )
texture = ExtResource( 6 )
hframes = 4
frame = 1

[node name="body" type="Sprite" parent="cannon_sprites_r90/cannon_rotation/body_orientation"]

texture = ExtResource( 7 )
flip_h = true

[node name="eyebrows" type="Sprite" parent="cannon_sprites_r90/cannon_rotation/body_orientation/body"]

texture = ExtResource( 8 )
flip_h = true

[node name="timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="screenprox" type="VisibilityNotifier2D" parent="."]

visibility/visible = false
rect = Rect2( -10, -10, 20, 20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

visibility/visible = false
build_mode = 0
polygon = Vector2Array( 16.3699, -60.069, 0.238052, -60.786, -6.57318, -48.239, -13.0259, -31.0317, -29.5163, -2.71126, -11.592, 34.9298, 0.955025, 55.3635, 12.7851, 56.7974, 24.6151, 49.2692, 38.5961, -5.57915 )
shape_range = Vector2( -1, -1 )
trigger = false

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.5
root/root = NodePath("..")
anims/default_pose = SubResource( 2 )
anims/firing = SubResource( 3 )
anims/firing_backup = SubResource( 4 )
anims/idle = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "default_pose"

[connection signal="timeout" from="timer" to="." method="_on_timeout"]

[connection signal="enter_screen" from="screenprox" to="." method="_on_enter_screen"]

[connection signal="exit_screen" from="screenprox" to="." method="_on_exit_screen"]


